# SQLHomeworks

./: .gitignore
homework5/: CMakeLists.txt  source.cpp
homework6/z1/z1/: z1.sln
homework6/z1/z1/z1/: z1.cpp  z1.vcxproj
homework6/z2/z2/: z2.sln
homework6/z2/z2/z2/: z2.cpp  z2.vcxproj
